[gd_scene load_steps=10 format=3 uid="uid://btroll001"]

[ext_resource type="PackedScene" uid="uid://cvqn3h8x2m7pk" path="res://scenes/enemies/enemy_base.tscn" id="1_base"]
[ext_resource type="Script" path="res://scenes/enemies/troll.gd" id="2_troll"]
[ext_resource type="Script" path="res://resources/enemies/troll_enemy_data.gd" id="3_data"]

[sub_resource type="Resource" id="Resource_troll_data"]
script = ExtResource("3_data")
variant = 0
level = 1
health = 200.0
damage = 30.0
speed = 2.0
attack_range = 3.0
detection_range = 12.0
patrol_speed = 1.5
regeneration_rate = 5.0
special_ability = ""
rage_threshold = 0.5
rage_damage_bonus = 1.5
rage_speed_bonus = 0.5
stun_duration = 2.0
environmental_resistance = ""
terrain_bonus = ""
mesh_color = Color(0.4, 0.3, 0.2, 1)
mesh_scale = Vector3(1.2, 1.2, 1.0)
armor_color = Color(0.2, 0.15, 0.1, 1)
weapon_color = Color(0.5, 0.5, 0.5, 1)
gold_drop_min = 25
gold_drop_max = 50
item_drops = ["healing_potion", "troll_hide_armor"]
drop_chance = 0.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_troll"]
radius = 0.8
height = 2.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_troll"]
radius = 0.8
height = 2.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_troll"]
albedo_color = Color(0.4, 0.3, 0.2, 1)
roughness = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_detect"]
radius = 12.0

[sub_resource type="SphereShape3D" id="SphereShape3D_attack"]
radius = 3.0

[node name="Troll" instance=ExtResource("1_base")]
script = ExtResource("2_troll")
troll_data = SubResource("Resource_troll_data")
variant = 0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("CapsuleShape3D_troll")

[node name="MeshInstance3D" parent="." index="1"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1, 0, 1.25, 0)
mesh = SubResource("CapsuleMesh_troll")
surface_material_override/0 = SubResource("StandardMaterial3D_troll")

[node name="StatsComponent" parent="." index="2"]
max_health = 200.0

[node name="NavigationAgent3D" parent="." index="3"]
path_max_distance = 20.0
avoidance_enabled = true
radius = 0.8
neighbor_distance = 10.0
max_neighbors = 6

[node name="DetectionArea" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" parent="DetectionArea" index="0"]
shape = SubResource("SphereShape3D_detect")

[node name="AttackArea" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" parent="AttackArea" index="0"]
shape = SubResource("SphereShape3D_attack")

[node name="HealthBar3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="7"]
max_distance = 20.0